--- a/gb/23/7/17/n14036195.md
+++ b/gb/23/7/17/n14036195.md
@@ -1,31 +1,33 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>硅谷房市 这种房产中国富豪青睐</h2>
-<a href="https://d1ntfewljph5k2.cloudfront.net/P5kqKohUk"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036233-shutterstock_2291778145-600x400.jpg" />///image2=```diff
+- 硅谷地产商表示，中国富豪对硅谷房地产情有独钟。（示意图）（Shutterstock）
+```
 <h6>硅谷地产商表示，中国富豪对硅谷房地产情有独钟。（示意图）（Shutterstock）
 </h6>
 <hr>
-	<p>【大纪元2023年07月17日讯】<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>湾区在发生远程工作潮、大量的人口流失之后，尤其旧金山市区更有严重的治安、流浪汉等问题，现在的硅谷房地产市场有受到明显的打击吗？从去年以来的房市调整中，现在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7%E6%88%BF%E5%B8%82.md#1">硅谷房市</a>出现哪些变化？我们今天又邀请到当地的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BE%B7%E7%AB%8B%E6%98%82.md#1">德立昂</a>地产（Deleon Realty）的房地产经纪人Audrey Sun来和大家分享她的最新观察！</p>
-<p>问：今年第一季到第二季，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A1%85%E8%B0%B7%E6%88%BF%E5%B8%82.md#1">硅谷房市</a>发生了哪些转变？</p>
+	<p>【大纪元2023年07月17日讯】旧金山湾区在发生远程工作潮、大量的人口流失之后，尤其旧金山市区更有严重的治安、流浪汉等问题，现在的硅谷房地产市场有受到明显的打击吗？从去年以来的房市调整中，现在硅谷房市出现哪些变化？我们今天又邀请到当地的德立昂地产（Deleon Realty）的房地产经纪人Audrey Sun来和大家分享她的最新观察！</p>
+<p>问：今年第一季到第二季，硅谷房市发生了哪些转变？</p>
 <p>Audrey：去年年初房市非常火，是因为利率还没有上涨，现在卖房速度慢了一点，但是房价还没有低很多，那是由于湾区的房源非常非常少。你想想看，如果屋主是三年前、五年前买的房子，那时候利息才3%，现在他如果要卖房，再买新的房子要负担7%的利息，所以很多屋主如果没有卖房需求，他就留着不卖。所以湾区几个主要的城市，上市房比往年少了非常多。</p>
 <p>看今年5月份和7月份的可售独立房源，比如Palo Alto在5月份有64栋，7月份只有60栋，其实往年这个时候，Palo Alto大约会有近100个房源数，但现在减少了将近一半；Mountain View的房市也非常火，谷歌的总部就在这里，5月份只有28栋，往年都会有七八十栋，7月份只剩16栋，所以现在Mountain View的房价卖得很高，就是因为没有房子。</p>
-<figure id="attachment_14036235" aria-describedby="caption-attachment-14036235" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14036235-37629fd5f83d3abb8855382212ab6435.png"><img class="size-large wp-image-14036235" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036235-37629fd5f83d3abb8855382212ab6435-600x184.png" alt="" width="600" b="184" /></a><figcaption id="caption-attachment-14036235" class="wp-caption-text">表：硅谷主要城市，5月和7月可售独立房数量比较。（大纪元制表，资料来源：<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%BE%B7%E7%AB%8B%E6%98%82.md#1">德立昂</a>地产）</figcaption></figure>
+<figure id="attachment_14036235" aria-describedby="caption-attachment-14036235" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14036235-37629fd5f83d3abb8855382212ab6435.png"><img decoding="async" class="size-large wp-image-14036235" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036235-37629fd5f83d3abb8855382212ab6435-600x184.png" alt="" width="600" b="184" /></a><figcaption id="caption-attachment-14036235" class="wp-caption-text">表：硅谷主要城市，5月和7月可售独立房数量比较。（大纪元制表，资料来源：德立昂地产）</figcaption></figure>
 <p>问：房价涨，除了供给很少，还有其它原因吗？</p>
 <p>Audrey：相信大家都知道硅谷很多公司，都有裁员的消息，但是据我们知道，这些裁掉的都不是高级的管理阶层，裁的都是比较年轻的工程师，所以我们现在有刚需买房的客户还是很多。</p>
 <p>不过，我现在发现有些买家，去年可能想买三四百万的房子，可能今年只能看270万、280万的房子，往下买一点，但是买家还是很多。然后一般买房都会出财产证明，他们的证书都显示满满的钱。所以，我觉得现在硅谷的买家还是有很强的资金。</p>
-<figure id="attachment_14036252" aria-describedby="caption-attachment-14036252" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14036252-shutterstock_1726825357.jpg"><img class="size-large wp-image-14036252" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036252-shutterstock_1726825357-600x351.jpg" alt="" width="600" b="351" /></a><figcaption id="caption-attachment-14036252" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%9B%BD%E5%AF%8C%E8%B1%AA.md#1">中国富豪</a>喜欢买地自建新房。（示意图）。（Shutterstock）</figcaption></figure>
+<figure id="attachment_14036252" aria-describedby="caption-attachment-14036252" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14036252-shutterstock_1726825357.jpg"><img decoding="async" class="size-large wp-image-14036252" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036252-shutterstock_1726825357-600x351.jpg" alt="" width="600" b="351" /></a><figcaption id="caption-attachment-14036252" class="wp-caption-text">中国富豪喜欢买地自建新房。（示意图）。（Shutterstock）</figcaption></figure>
 <p>问：除了当地买家，是不是还有来自中国的买家？</p>
 <p>Audrey：因为现在中国解封，来自大陆的买家也是越来越多。我们刚卖了一片2.5英亩的土地，上面没有房子，卖出2,500万美元，这个土地已经上市两年多了，正好一个客人从中国过来买了这块地，想自己盖房子。这些中国客户，要么买全新的房子，他们比较喜欢新房，或者是买一块地自己建，现在就比较多。</p>
-<p><span style="color: #0000ff;">想抄底硅谷房产 真的不容易啊！｜硅谷房价 一个原因降不下来｜中国富人买房就是任性｜硅谷买房卖房的忠告【<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%9C%B0%E4%BA%A7.md#1">美国地产</a>热点】第123集</span><br />
-<a title="YouTube video player" src=""></a><a href="https://d1ntfewljph5k2.cloudfront.net/P5kqKohUk"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Il390ffAcfU" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
+<p><span style="color: #0000ff;">想抄底硅谷房产 真的不容易啊！｜硅谷房价 一个原因降不下来｜中国富人买房就是任性｜硅谷买房卖房的忠告【美国地产热点】第123集</span><br />
+<a title="YouTube video player" src=""></a><a href="https://dervszfjn9udk.cloudfront.net/P0rqKohUn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/Il390ffAcfU" width="560" b="315" frameborder="0" allowfullscreen="allowfullscreen"></a></p>
 <p>问：现在中国客户都买这么高价位吗？</p>
 <p>Audrey：已经在湾区生活五年、十年的中国客户还是会买二手房，只是刚刚从中国来的人，会比较喜欢全新房或是自建房产。</p>
 <p>问：所以我们看到很多加州人口外流、裁员，这些都没有影响到硅谷的房价？</p>
 <p>Audrey：没有。Palo Alto是影响了一点，那是因为Palo Alto的房价实在太高了。Mountain View就在隔壁，但是房价就是差了一截，现在差距慢慢缩小，Palo Alto往下降，Mountain View往上升。</p>
 <p>问：请介绍几个城市的房市变化。</p>
 <p>Audrey：Palo Alto的房价，从去年到现在大约跌了8%－10%。Menlo Park大约跌了2%－3%，没有跌太多，要看你在哪个小区买，有好区、不好的区；Mountain View完全没有跌价，还涨了许多；Sunnyvale房市也非常火，房源很少，价位大约在三百万左右；Los Altos跟Menlo Park的价位差不多，要买一个不错的房子大概也要四五百万，它的房源现在也只要35栋；至于Atherton，一般都是大房子，至少一英亩的土地，房价也没有跌太多，最近很多千万房产都卖出去了。</p>
-<figure id="attachment_14036256" aria-describedby="caption-attachment-14036256" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14036256-MountainView.png"><img class="size-large wp-image-14036256" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036256-MountainView-600x309.png" alt="" width="600" b="309" /></a><figcaption id="caption-attachment-14036256" class="wp-caption-text">图表：Mountain View房市概况。（德立昂地产提供）</figcaption></figure>
+<figure id="attachment_14036256" aria-describedby="caption-attachment-14036256" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/07/id14036256-MountainView.png"><img decoding="async" class="size-large wp-image-14036256" src="https://i.epochtimes.com/assets/uploads/2023/07/id14036256-MountainView-600x309.png" alt="" width="600" b="309" /></a><figcaption id="caption-attachment-14036256" class="wp-caption-text">图表：Mountain View房市概况。（德立昂地产提供）</figcaption></figure>
 <p>问：现在利率很高，现金买房的人多吗？</p>
 <p>Audrey：还是贷款多，上个月我们卖一个Mountain View的房子，有23报价，只有两个是全现金。其实这些客户可以贷款6.5%的利率，等明年利率可能降到5%，还可以去做Refinance，所以很多人都不是太担心。</p>
 <p>问：现在中国的买家比例大概是多少？</p>
@@ -37,49 +39,40 @@
 <p>Audrey：做为一个买家，一定要选一个很有能力的买家经纪，而且现在要拿到最好的价位，就是能找到未上市（Off Markert）的房产，有些卖方因为不想要花钱打广告，选择不上到市场上。这样对买家是一个非常好的机会，不需要去和别人抢，上市房可能有20个报价，但未上市的，可能只有你一个人。所以，买家需要一个能干的买方经纪，去帮你找这些未上市的房产。</p>
 <p>做为卖家，你需要包装你的房子，这在湾区还是非常重要的。卖方需要知道如何布置、修缮，这样房产才会卖得高。有些买家愿意付较高的价格，是因为他们可以什么都不用操心，就马上可以搬进新家。所以一个卖家你需要一个团队，就像德立昂地产，我们有设计师、技师去帮你把房子做得很漂亮，把它包装好，对卖家来说很重要。</p>
 <p>虽然现在利息高这么多，但是房价却没有跌，证明湾区房产很保值，是值得去投资的，现在想买还是可以去投资。</p>
-<p>问：最后一个问题，现在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1.md#1">旧金山</a>治安很不好、无家可归者很多，这方面对湾区其它地区有没有影响？</p>
+<p>问：最后一个问题，现在旧金山治安很不好、无家可归者很多，这方面对湾区其它地区有没有影响？</p>
 <p>Audrey：没有特别大的影响，像是Oakland也是治安不太好，那是在东北边的地区。但是东湾的Fremont，很多中国人喜欢住在那边，那里的价位也很好，两百万到三百万之间，算是湾区的低价位房，但是那里的学区很不错，跟Palo Alto相比也不差，只是离旧金山、圣荷西远了一点，需要过桥，所以Fremont是一个不错的城市。◇</p>
 <p>责任编辑：李曜宇</p>
 	
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/4/25/n13719883.md#1">硅谷房市又冲新高，房价在山顶了吗？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/17/n13804264.md#1">硅谷房价 7月降至今年以来低点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/18/n13952940.md#1">硅谷Broker：硅谷银行关闭 对刚性买家影响不大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/8/n13967947.md#1">中国富人加紧移民 疯买硅谷豪宅</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/25/n13719883.md#1">硅谷房市又冲新高，房价在山顶了吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/17/n13804264.md#1">硅谷房价 7月降至今年以来低点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/3/18/n13952940.md#1">硅谷Broker：硅谷银行关闭 对刚性买家影响不大</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/8/n13967947.md#1">中国富人加紧移民 疯买硅谷豪宅</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/11/11/n11647719.md#1" target="_blank">钟声：“服从命令”与“终身追责”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/13/n11042473.md#1" target="_blank">感恩李洪志大师 中西方民众的故事</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030544.md#1">我所遇见的中国“灵魂”们（上）：撞见司机的内心宇宙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031717.md#1">浪淘沙?佳人</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030840.md#1">北京逃生记(21) 三路反击——地狱鬼子票 宰人不用刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034442.md#1">散文：在红尘中等你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034873.md#1">浪淘沙?星斗</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035203.md#1">【马克时空】印度舰载机选法国阵风 潜艇选德法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034498.md#1">【马克时空】乌克兰对AMX-10RC评价如何</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035590.md#1">【还原真相】江泽民：身世迷雾重重 死亦迷雾重重</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034627.md#1">日本沙特将联手开发稀土资源 降低对华依赖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034803.md#1">麦肯锡：2030年写字楼价值或蒸发八千亿美元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/15/n14034578.md#1">洛杉矶民主平台换届选举 民运整合抗共力量</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034371.md#1">宋慧乔接受李到晛指名冰桶挑战 邀韩韶禧接棒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034180.md#1">好莱坞演员和编剧罢工 对电视电影有何影响</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034451.md#1">资方提永久使用临时演员AI形象 罢工谈判未果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035215.md#1">为拍戏抽3千根烟 席尼·墨菲不再演出抽烟角色</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034233.md#1">AKIRA带队 EXILE主唱TAKAHIRO等人21日访台</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/14/n14034228.md#1">为什么搭乘优步或计程车容易头晕？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/10/n14031563.md#1">诱之以利！《孙子兵法》教你谈判的关键筹码</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/18/n14018401.md#1">中医谈不孕症 多囊性卵巢症候群十分常见</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/12/n14032958.md#1">加州核桃蛋糕 一款非常简单的甜点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/16/n14035318.md#1">生活中如何应用无为？ 美国心理学家这么说</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308837.md#1">【探索时分】台湾拟采购鹰眼E2D 能否探测歼20？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308276.md#1">珍珠粉有助延缓衰老 改善睡眠 预防骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308560.md#1">【车评】红章的“R” 2024 Honda Civic Type R</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/17/n14036195.htm">硅谷房市 这种房产中国富豪青睐</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/7/17/n14036195.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/7/17/n14036195.htm">硅谷房市 这种房产中国富豪青睐</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/7/17/n14036195.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
